EXP-thesis_exp/3dvit

--- a/default_settings.json
+++ b/default_settings.json
@@ -1,9 +1,15 @@
 {
-    "name": "[THESIS] Baseline experiment with 3D reg dataset.",
-    "data": "dataset/NIIreg.csv",
+    "name": "[THESIS] ViT experiment with 3D ori dataset.",
+    "data": "dataset/NIIori.csv",
     "batch_size": 2,
     "volume_size": [256, 256, 128],
-    "model": "baseline",
+    "model": "vit",
+    "model_params": {
+        "projection_dim": 32,
+        "num_heads": 12,
+        "transformer_layers": 12,
+        "mlp_head_units": [64, 16]
+    },
     "seed": 7,
     "lr": 1e-3,
     "decay": 1e-4,
